# clima_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_alerting_schema.py  0002_seed_mock_weather_data.py  0003_weather_events_datetime.py
app/: main.py
app/api/: routes.py
app/core/: config.py  errors.py
app/db/: session.py
app/models/: __init__.py  alert_rule.py  enums.py  field.py  notification.py  user.py  weather_event.py
app/schemas/: alert_rule.py  common.py  field.py  notification.py  user.py  weather_event.py
app/services/: alerts.py  background.py  weather.py
stress_test_damian/: README.md  stress_api.py
tests/: test_alert_evaluation.py  test_api.py
