[project]
name = "alertas-climaticas-bot"
version = "0.1.0"
description = "Sistema de alertas climaticas con FastAPI, SQLAlchemy async, PostgreSQL y Alembic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "greenlet==3.1.1",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "aiosqlite==0.20.0",
    "httpx==0.27.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
